--- a/rro_overlays/SystemUIOverlayAmber/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayAmber/res/values/config.xml
@@ -57,4 +57,7 @@
 
     <!-- Height of the status bar header bar when on Keyguard -->
     <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height</dimen>
+
+    <!-- Preferred max refresh rate at AOD & Ambient Display, if supported by the display. -->
+    <integer name="config_aodMaxRefreshRate">60</integer>
 </resources>
