--- a/rro_overlays/FrameworksResOverlayAmber/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayAmber/res/values/config.xml
@@ -280,6 +280,9 @@
          2: gestures only for back, home and overview -->
     <integer name="config_navBarInteractionMode">2</integer>
 
+    <!-- Whether or not wcg mode should be enabled on this device -->
+    <bool name="config_enableWcgMode">true</bool>
+
     <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
          autodetected from the Configuration. -->
     <bool name="config_showNavigationBar">true</bool>
